<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/label_api_endpoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/api_endpoint"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/api_endpoint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_api_endpoint"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_api_endpoint"
        android:inputType="textUri" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/api_endpoint"
        android:layout_marginTop="16dp"
        android:text="@string/save" />
</RelativeLayout>
